# safety-detector

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
aia_yolo/: train.py
model/: 8n10class.yaml
safety_detector/: main.py  predict.py  strapi_client.py  train.py
