[tool.poetry]
name = "aia-yolo"
version = "0.1.0"
description = ""
authors = ["Thomas Lin <bbkings2002@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
aia-yolo = "aia_yolo.main:main"
aia-yolo-build = "aia_yolo.main:build"

[tool.poetry.dependencies]
python = ">= 3.9, < 3.11"
python-dotenv = "0.19.2"
typing-extensions = "4.6.1"

[tool.poetry.group.dev.dependencies]
black = "22.1.0"
flake8 = "^6.1.0"
flake8-pyproject = "^1.2.3"
isort = "^5.12.0"
pre-commit = "2.17.0"
pytest = "7.0.0"
pytest-cov = "3.0.0"
pytest-mock = "3.7.0"
pytest-httpserver = "1.0.6"
pytest-watcher = "0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
ignore = ['E203', 'W503']

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-srA --cov-report=term-missing --cov"
testpaths = ["test"]
